# ojhg

./: .dockerignore  .gitignore  CLAUDE.md  Makefile
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  courses.py  github.py  problem_sets.py  problems.py  similarity.py  submissions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  course.py  github.py  grade_passback.py  problem.py  problem_set.py  similarity.py  submission.py  user.py
backend/app/schemas/: course.py  github_publish.py  grade_passback.py  problem.py  problem_set.py  similarity.py  stats.py  submission.py
backend/app/services/: classroom_api.py  github_publish.py  grade_passback.py  json_import.py  scoring.py  similarity.py
backend/judge/: compare.py  sandbox.py
backend/judge/images/c17/: Dockerfile
backend/judge/images/java17/: Dockerfile
backend/judge/images/python3/: Dockerfile
backend/tests/test_judge/: test_compare.py
backend/tests/test_services/: test_json_import.py  test_scoring.py  test_similarity.py
backend/workers/: celery_app.py  grade_sync_task.py  judge_task.py  similarity_task.py
frontend/: Dockerfile  package-lock.json  package.json
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml
(+31 files in other folders)
