[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "online-judge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.130.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "jsonschema>=4.22.0",
    "pygit2>=1.15.0",
    "itsdangerous>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "workers", "judge"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
